--- a/visualisations/Data.html
+++ b/visualisations/Data.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -26,17 +26,17 @@
                 Plots
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="MaxTemperature.html">Max Temperature</a>
-                <a class="dropdown-item" href="Humidity.html">Humidity</a>            
-                <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
-                <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
+                <a class="dropdown-item" href="visualisations/MaxTemperature.html">Max Temperature</a>
+                <a class="dropdown-item" href="visualisations/Humidity.html">Humidity</a>            
+                <a class="dropdown-item" href="visualisations/Cloudiness.html">Cloudiness</a>
+                <a class="dropdown-item" href="visualisations/WindSpeed.html">Wind Speed</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="Comparison.html">Comparison<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="visualisations/Comparison.html">Comparison<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="Data.html">Data</a>
+                <a class="nav-link" href="visualisations/Data.html">Data</a>
             </li>
             </ul>
         </div>
