--- a/visualisations/Comparison.html
+++ b/visualisations/Comparison.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -51,25 +51,25 @@
                     <div class="col-lg-6 col-sm-12">
                         <h3 class="text-center">vs. Max Temperature</h3>
                         <a href="visualisations/MaxTemperature.html">
-                            <img src="assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
+                            <img src="../assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
                         </a>
                     </div>
                     <div class="col-lg-6  col-sm-12">
                         <h3 class="text-center">vs. Humidity</h3>
                         <a href="visualisations/Humidity.html">
-                            <img src="assets/images/Fig2.png" class="rounded float right thumbnail" alt="Latitude vs Humidity">
+                            <img src="../assets/images/Fig2.png" class="rounded float right thumbnail" alt="Latitude vs Humidity">
                         </a>
                     </div>
                     <div class="col-lg-6 col-sm-12">
                         <h3 class="text-center">vs. Cloudiness</h3>
                         <a href="visualisations/Cloudiness.html">
-                            <img src="assets/images/Fig3.png" class="rounded float-left  thumbnail" alt="Latitude vs Temperature">
+                            <img src="../assets/images/Fig3.png" class="rounded float-left  thumbnail" alt="Latitude vs Temperature">
                         </a>
                     </div>
                     <div class="col-lg-6 col-sm-12">
                         <h3 class="text-center">vs. Wind Speed</h3>
                         <a href="visualisations/WindSpeed.html">
-                            <img src="assets/images/Fig4.png" class="rounded float right  thumbnail" alt="Latitude vs Humidity">
+                            <img src="../assets/images/Fig4.png" class="rounded float right  thumbnail" alt="Latitude vs Humidity">
                         </a>
                     </div>
                 </div>
