--- a/visualisations/Cloudiness.html
+++ b/visualisations/Cloudiness.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -45,23 +45,23 @@
         <div class="col-sm-12 col-md-8 col-lg-8">
             <h2 class="text-left">Cloudiness</h2>
             <hr class="my-4">
-            <img src="assets/images/Fig3.png" alt="Latitude vs Cloudiness" class="img-fluid">
+            <img src="../assets/images/Fig3.png" alt="Latitude vs Cloudiness" class="img-fluid">
             <p>This scatter plots, latitude vs cloudiness, does not have a clear trend. Cities would have sunny days as much as cloudy days. Distance from the equator to city is less likely to be a factor that influences cloudiness.</p>
         </div>
          <div class="col-sm-12 col-md-4 col-lg-4" >
             <h2 class="text-left">Visualizations</h2>
             <hr class="my-4">
             <a href="visualisations/MaxTemperature.html">
-                <img src="assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
+                <img src="../assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
             </a>
             <a href="visualisations/Humidity.html">
-                <img src="assets/images/Fig2.png" class="rounded float right thumbnail" alt="Latitude vs Humidity">
+                <img src="../assets/images/Fig2.png" class="rounded float right thumbnail" alt="Latitude vs Humidity">
             </a>
             <a href="visualisations/Cloudiness.html">
-                <img src="assets/images/Fig3.png" class="rounded float-left  thumbnail" alt="Latitude vs Temperature">
+                <img src="../assets/images/Fig3.png" class="rounded float-left  thumbnail" alt="Latitude vs Temperature">
             </a>
             <a href="visualisations/WindSpeed.html">
-                <img src="assets/images/Fig4.png" class="rounded float right  thumbnail" alt="Latitude vs Humidity">
+                <img src="../assets/images/Fig4.png" class="rounded float right  thumbnail" alt="Latitude vs Humidity">
             </a>
         </div>
     </div>
