--- a/visualisations/MaxTemperature.html
+++ b/visualisations/MaxTemperature.html
@@ -45,23 +45,23 @@
         <div class="col-sm-12 col-md-8 col-lg-8">
             <h2 class="text-left">Max Temperature</h2>
             <hr class="my-4">
-            <img src="assets/images/Fig1.png" alt="Latitude vs Temperature" class="img-fluid">
+            <img src="../assets/images/Fig1.png" alt="Latitude vs Temperature" class="img-fluid">
             <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Degrees Latitude). More interestingly, however, is the fact that the southern hemisphere tend to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.</p>
         </div>
          <div class="col-sm-12 col-md-4 col-lg-4" >
             <h2 class="text-left">Visualizations</h2>
             <hr class="my-4">
             <a href="visualisations/MaxTemperature.html">
-                <img src="Resources/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
+                <img src="../assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
             </a>
             <a href="visualisations/Humidity.html">
-                <img src="assets/images/Fig2.png" class="rounded float right thumbnail" alt="Latitude vs Humidity">
+                <img src="../assets/images/Fig2.png" class="rounded float right thumbnail" alt="Latitude vs Humidity">
             </a>
             <a href="visualisations/Cloudiness.html">
-                <img src="assets/images/Fig3.png" class="rounded float-left  thumbnail" alt="Latitude vs Temperature">
+                <img src="../assets/images/Fig3.png" class="rounded float-left  thumbnail" alt="Latitude vs Temperature">
             </a>
             <a href="visualisations/WindSpeed.html">
-                <img src="assets/images/Fig4.png" class="rounded float right  thumbnail" alt="Latitude vs Humidity">
+                <img src="../assets/images/Fig4.png" class="rounded float right  thumbnail" alt="Latitude vs Humidity">
             </a>
         </div>
     </div>
