--- a/visualisations/Data.html
+++ b/visualisations/Data.html
@@ -26,17 +26,17 @@
                 Plots
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="visualisations/MaxTemperature.html">Max Temperature</a>
-                <a class="dropdown-item" href="visualisations/Humidity.html">Humidity</a>            
-                <a class="dropdown-item" href="visualisations/Cloudiness.html">Cloudiness</a>
-                <a class="dropdown-item" href="visualisations/WindSpeed.html">Wind Speed</a>
+                <a class="dropdown-item" href="MaxTemperature.html">Max Temperature</a>
+                <a class="dropdown-item" href="Humidity.html">Humidity</a>            
+                <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
+                <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="visualisations/Comparison.html">Comparison<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="Comparison.html">Comparison<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="visualisations/Data.html">Data</a>
+                <a class="nav-link" href="Data.html">Data</a>
             </li>
             </ul>
         </div>
