--- a/visualisations/MaxTemperature.html
+++ b/visualisations/MaxTemperature.html
@@ -26,17 +26,17 @@
                 Plots
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="visualisations/MaxTemperature.html">Max Temperature</a>
-                <a class="dropdown-item" href="visualisations/Humidity.html">Humidity</a>            
-                <a class="dropdown-item" href="visualisations/Cloudiness.html">Cloudiness</a>
-                <a class="dropdown-item" href="visualisations/WindSpeed.html">Wind Speed</a>
+                <a class="dropdown-item" href="MaxTemperature.html">Max Temperature</a>
+                <a class="dropdown-item" href="Humidity.html">Humidity</a>            
+                <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
+                <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="visualisations/Comparison.html">Comparison</a>
+                <a class="nav-link" href="Comparison.html">Comparison</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="visualisations/Data.html">Data</a>
+                <a class="nav-link" href="Data.html">Data</a>
             </li>
             </ul>
         </div>
@@ -51,16 +51,16 @@
          <div class="col-sm-12 col-md-4 col-lg-4" >
             <h2 class="text-left">Visualizations</h2>
             <hr class="my-4">
-            <a href="visualisations/MaxTemperature.html">
+            <a href="MaxTemperature.html">
                 <img src="../assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
             </a>
-            <a href="visualisations/Humidity.html">
+            <a href="Humidity.html">
                 <img src="../assets/images/Fig2.png" class="rounded float right thumbnail" alt="Latitude vs Humidity">
             </a>
-            <a href="visualisations/Cloudiness.html">
+            <a href="Cloudiness.html">
                 <img src="../assets/images/Fig3.png" class="rounded float-left  thumbnail" alt="Latitude vs Temperature">
             </a>
-            <a href="visualisations/WindSpeed.html">
+            <a href="WindSpeed.html">
                 <img src="../assets/images/Fig4.png" class="rounded float right  thumbnail" alt="Latitude vs Humidity">
             </a>
         </div>
