--- a/visualisations/Data.html
+++ b/visualisations/Data.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Latitude</a>
+        <a class="navbar-brand" href="../index.html">Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,7 +46,8 @@
             <h2 class="text-left">Data</h2>
             <hr class="my-4">
             <p>The following table includes all of the data used for plotting during this project.</p>
-            <table id="table" class="table table-striped">
+            <div class="table-responsive">
+                <table class="table">
                       <tr>
                         <th></th>
                 <th>City</th>
