--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <h2 class="text-left">Summary: Latitude vs. X</h2>
             <hr class="my-4">
             <img src="assets/images/Fig1.png" alt="Latitude vs Temperature" class="rounded main-image">
-            <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
-            <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs, latitude. Factor we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+            <p>This project's objective is to examine how the weather changes as one gets nearer to the equator. We assembled a dataset of more than 500 cities using information from the OpenWeatherMap API before beginning our investigation.</p>
+            <p>After putting the dataset together, we plotted several weather variables against latitude using Matplotlib. We took into consideration factors like temperature, cloudiness, wind speed, and humidity. This website offers explanations and descriptions of any trends and correlations noticed, as well as the source data and visuals developed as part of the investigation.</p>
         </div>
          <div class="col-sm-12 col-md-4 col-lg-4" >
-            <h2 class="text-left">Visualizations</h2>
+            <h2 class="text-left">Visualisations</h2>
             <hr class="my-4">
             <a href="visualisations/MaxTemperature.html">
                 <img src="assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
