--- a/visualisations/Cloudiness.html
+++ b/visualisations/Cloudiness.html
@@ -46,10 +46,10 @@
             <h2 class="text-left">Cloudiness</h2>
             <hr class="my-4">
             <img src="../assets/images/Fig3.png" alt="Latitude vs Cloudiness" class="img-fluid">
-            <p>This scatter plots, latitude vs cloudiness, does not have a clear trend. Cities would have sunny days as much as cloudy days. Distance from the equator to city is less likely to be a factor that influences cloudiness.</p>
+            <p>This one demonstrates how cloudiness alters as you approach (or depart from) the equator (Latitude of 0). On the graph, the data points are distributed rather equally. The majority of cities often have either low or very high levels of cloud cover. Thus, the majority of the data points are close to the extremes. It doesn't seem like there is a direct relationship between a city's latitude and cloudiness because the data points are dispersed.</p>
         </div>
          <div class="col-sm-12 col-md-4 col-lg-4" >
-            <h2 class="text-left">Visualizations</h2>
+            <h2 class="text-left">Visualisations</h2>
             <hr class="my-4">
             <a href="MaxTemperature.html">
                 <img src="../assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
