--- a/visualisations/Humidity.html
+++ b/visualisations/Humidity.html
@@ -46,10 +46,10 @@
             <h2 class="text-left">Humidity</h2>
             <hr class="my-4">
             <img src="../assets/images/Fig2.png" alt="Latitude vs Humidity" class="img-fluid">
-            <p>Although cities located between +/- 15 degrees from the equator have percentages of humidity higher than 40%, there are cities that can have the same percentage in a very wide range of latitude.</p>
+            <p>This scatter plot demonstrates how humidity changes as you approach (or depart) the equator (Latitude of 0). The majority of the cities represented by this plot have relative humidity levels between 60% and 100%. So, regardless of latitude, high humidity is a fact around the globe.</p>
         </div>
          <div class="col-sm-12 col-md-4 col-lg-4" >
-            <h2 class="text-left">Visualizations</h2>
+            <h2 class="text-left">Visualisations</h2>
             <hr class="my-4">
             <a href="MaxTemperature.html">
                 <img src="../assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
