--- a/visualisations/MaxTemperature.html
+++ b/visualisations/MaxTemperature.html
@@ -46,10 +46,10 @@
             <h2 class="text-left">Max Temperature</h2>
             <hr class="my-4">
             <img src="../assets/images/Fig1.png" alt="Latitude vs Temperature" class="img-fluid">
-            <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Degrees Latitude). More interestingly, however, is the fact that the southern hemisphere tend to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.</p>
+            <p>This scatter plot demonstrates how the maximum temperature changes as you reach (or move away) the equator (Latitude of 0). In the southern hemisphere, the maximum temperature starts to fall as you travel further south. Further north in the northern hemisphere, the maximum temperature also steadily drops.</p>
         </div>
          <div class="col-sm-12 col-md-4 col-lg-4" >
-            <h2 class="text-left">Visualizations</h2>
+            <h2 class="text-left">Visualisations</h2>
             <hr class="my-4">
             <a href="MaxTemperature.html">
                 <img src="../assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
