--- a/visualisations/WindSpeed.html
+++ b/visualisations/WindSpeed.html
@@ -46,10 +46,10 @@
             <h2 class="text-left">Wind Speed</h2>
             <hr class="my-4">
             <img src="../assets/images/Fig4.png" alt="Latitude vs Wind Speed" class="img-fluid">
-            <p>This scatter plot, latitude vs wind speed, does not have a clear trend. Cities would have windy days and calm days. Distance from the equator to city is less likely to be a factor that influences wind speed.</p>
+            <p>This scatter plot demonstrates how wind speed changes as you approach (or depart) the equator (Latitude of 0). Cities farther from the equator appear to have similar wind speeds as the ones closer. The latitude of a city does not seem to have much of an impact on wind speed.</p>
         </div>
          <div class="col-sm-12 col-md-4 col-lg-4" >
-            <h2 class="text-left">Visualizations</h2>
+            <h2 class="text-left">Visualisations</h2>
             <hr class="my-4">
             <a href="MaxTemperature.html">
                 <img src="../assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
